k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verbose-eureka-service
spec:
  selector:
    app: verbose-eureka
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
